Clean up after inspection Renaming CopperServices to CopperController + use of @RequestParam to use default values (spring alignment)